# rules_shellcheck

./: BUILD.bazel  MODULE.bazel  README.md
shellcheck/: def.bzl  extensions.bzl  toolchains.bzl
shellcheck/rules/: BUILD.bazel  shellcheck.bzl
shellcheck/toolchains/shellcheck/: BUILD.toolchain.tpl  toolchain.bzl
tests/bcr/: BUILD.bazel  MODULE.bazel  ascript.sh
