module(
    name = "rules_shellcheck",
    version = "0.0.1",
    repo_name = "rules_shellcheck",
)

bazel_dep(name = "platforms", version = "0.0.7")

repos = use_extension("@rules_shellcheck//shellcheck:extensions.bzl", "repositories")

repos.download(
    version = "0.9.0",
    sha256 = "700324c6dd0ebea0117591c6cc9d7350d9c7c5c287acbad7630fa17b1d4d9e2f",
    os = "linux",
    arch = "x86_64",
)

use_repo(
    repos,
    "shellcheck",
)

register_toolchains(
    "@rules_shellcheck//:linux_amd64_toolchain",
)
